overflow is fixed

--- a/src/pages/home/HomeP.module.scss
+++ b/src/pages/home/HomeP.module.scss
@@ -13,6 +13,7 @@
   grid-template-columns: 1fr 1fr;
   align-items: center;
   color: #f5f5f5;
+  overflow-x: hidden;
   &_info {
     padding: 58px 64px;
     padding-right: 0;
@@ -480,6 +481,7 @@
   display: grid;
   grid-template-columns: 1fr 1fr;
   column-gap: 30px;
+  overflow-x: hidden;
   &_left {
     position: relative;
     padding: 89px 29px 0 29px;
